# nodec_world

./: CMakeLists.txt
.github/workflows/: build.yaml
include/nodec_world/: system_registry.hpp  world.hpp
include/nodec_world/components/: destroy_later.hpp  world_systems.hpp
include/nodec_world/impl/: world_impl.hpp
tests/: CMakeLists.txt  system_registry.cpp
